Issue #178: added Files methods to read string from streams, with UTF-8 encoding assumed