@@ -6,10 +6,10 @@ import java.io.IOException;
 import java.io.InputStream;
 
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 
 import com.js.android.AppPreferences;
 import com.js.android.UITools;
+import com.js.basic.Files;
 import com.js.geometry.AlgorithmStepper;
 import com.js.geometry.R;
 import com.js.geometryapp.editor.Editor;
@@ -226,8 +226,7 @@ public abstract class GeometryStepperActivity extends GeometryActivity {
 					// handle as content uri
 					InputStream stream = getContentResolver()
 							.openInputStream(u);
-					jsonContent = IOUtils.toString(stream, "UTF-8");
-					stream.close();
+					jsonContent = Files.readString(stream);
 				} else {
 					File f = new File(u.getPath());
 					jsonContent = FileUtils.readFileToString(f);
