@@ -3,8 +3,7 @@ package com.js.geometryapptest;
 import java.io.IOException;
 import java.io.InputStream;
 
-import org.apache.commons.io.IOUtils;
-
+import com.js.basic.Files;
 import com.js.testUtils.MyTestCase;
 
 import android.content.res.AssetManager;
@@ -19,8 +18,7 @@ public class AppContextTests extends MyTestCase {
 		assertNotNull("asset manager null", m);
 
 		InputStream is = m.open("snapshots/RandomString.txt");
-		String content = IOUtils.toString(is, "UTF-8");
-		is.close();
+		String content = Files.readString(is);
 		assertTrue("unexpected file contents:\n" + content,
 				content.indexOf("jgpgjbyygn") >= 0);
 	}
